@@ -1,3 +1,9 @@
+lod2statworkbench (0.0.3) lod2; urgency=low
+
+  * fix dependency issue for r2r
+
+ -- Karel Kremer <Karel.Kremer@tenforce.com>  Wed, 29 Aug 2013 11:13:35 +0100
+
 lod2statworkbench (0.0.2) lod2; urgency=low
 
   * improve password management strategy in installation
